--- a/src/components/appointment/Appointment.css
+++ b/src/components/appointment/Appointment.css
@@ -1,3 +1,24 @@
 .btn__appt-list {
     width: auto;
 }
+
+#appointment__progress {
+    border: 1px;
+}
+
+.appt__progress {
+    margin-top: 20%;
+    text-align: center;
+    border: 1px solid gray;
+    border-radius: 1rem;
+    padding: .5rem;
+}
+
+.paragraph {
+    width: 300px;
+    height: 100px;
+    word-wrap: break-word;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    border: .2px dotted lightgray;
+}
