--- a/src/components/appointment/Appointment.css
+++ b/src/components/appointment/Appointment.css
@@ -2,23 +2,15 @@
     width: auto;
 }
 
-#appointment__progress {
-    border: 1px;
-}
-
-.appt__progress {
-    margin-top: 20%;
-    text-align: center;
-    border: 1px solid gray;
-    border-radius: 1rem;
-    padding: .5rem;
+#btn__media {
+    margin-left: auto;
 }
 
 .paragraph {
-    width: 300px;
+    /* width: 300px; */
     height: 100px;
     word-wrap: break-word;
-    margin-top: 2px;
-    margin-bottom: 2px;
+    margin: 5px;
+    padding-left: 3%;
     border: .2px dotted lightgray;
 }
