--- a/src/components/appointment/Appointment.css
+++ b/src/components/appointment/Appointment.css
@@ -1,10 +1,12 @@
 .btn__appt-list {
-    width: auto;
+    width: 100%;
 }
 
 #btn__media {
     margin-left: auto;
 }
+
+
 
 .paragraph {
     /* width: 300px; */
