Added Create Services Module./Update bulma styling

--- a/src/components/appointment/Appointment.css
+++ b/src/components/appointment/Appointment.css
@@ -1,10 +1,10 @@
+/* button cover full container/section/div */
 .btn__appt-list {
     width: 100%;
 }
 
-#btn__media {
-    margin-left: auto;
-}
+
+
 
 
 
