--- a/src/components/appointment/Appointment.css
+++ b/src/components/appointment/Appointment.css
@@ -10,11 +10,22 @@
 /* add grid to child elements */
 .grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1r;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .grid * {
     grid-column: 2 / 3;
+}
+
+/* separate items away from each other */
+.item {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* font size override */
+.appt__font {
+    font-size: small;
 }
 
 /* center elements hv */
@@ -24,10 +35,15 @@
     align-items: center;
 }
 
+/* details box css */
 .paragraph {
     /* width: 300px; */
     height: 100px;
     word-wrap: break-word;
     margin: 5px;
     padding-left: 3%;
+}
+
+.center__text {
+    text-align: center;
 }
