added employee components

--- a/src/components/service/Service.css
+++ b/src/components/service/Service.css
@@ -6,3 +6,9 @@
 .services__list {
     margin: auto;
 }
+
+/* service create form */
+.mc__service--create {
+    margin: auto;
+    width: fit-content;
+}
