--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,18 +1,25 @@
 /* .navbar {
-    display: flex;
     flex-wrap: nowrap;
     justify-content: left;
-}
 
-.navbar__item {
-    flex-basis: 20%;
-    list-style-type: none;
 } */
 
-.navbar-item {
+/* .navbar__item {
+    flex-basis: 20%;
+    list-style-type: none;
+    max-height: 3rem;
+} */
+
+/* .navbar-item {
     max-height: 3rem;
 
-}
+} */
+
+/* .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
 
 /* @media screen and (max-width: 1024px) {
     .navbar-menu {
