updated service details to display image link to techs and provide details about service

--- a/src/components/service/Service.css
+++ b/src/components/service/Service.css
@@ -3,6 +3,10 @@
     margin: auto;
 }
 
+.btn__service--details {
+    width: 10rem;
+}
+
 .services__list {
     margin: auto;
 }
@@ -16,4 +20,9 @@
 .mc__service--update {
     margin: auto;
     width: 40rem;
+}
+
+.mc__service--details {
+    margin: auto;
+    width: 50rem;
 }
