--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,32 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
 
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+body {
+  background: #FFFFFF;
+  background-image: url("https://res.cloudinary.com/dp04hh5pz/image/upload/v1673326489/n7mcg6bcgkhk7qdkuynx.png");
+  /* height: 100%; */
+  /* background-position: center; */
+  background-position-y: top;
+  background-position-x: right;
+  background-repeat: no-repeat;
+  /* background-attachment: fixed; */
+  /* background-size: contain; */
+  background-size: 20% auto;
+  /* min-height: 100vh; */
+  /* display: grid; */
+
 }
