--- a/src/index.css
+++ b/src/index.css
@@ -18,28 +18,16 @@
 body {
   background: #FFFFFF;
   background-image: url("https://res.cloudinary.com/dp04hh5pz/image/upload/v1673326489/n7mcg6bcgkhk7qdkuynx.png");
-  /* height: 100%; */
-  /* background-position: center; */
   background-position-y: top;
   background-position-x: right;
   background-repeat: no-repeat;
   /* background-attachment: fixed; */
-  /* background-size: contain; */
+  background-attachment: scroll;
   background-size: 20% auto;
-  /* min-height: 100vh; */
-  /* display: grid; */
+  min-height: calc(100vh + 5rem);
+  margin-top: 2rem;
   margin: 0;
   padding: 0;
-
-}
-
-
-html,
-body {
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
-  /* overflow-x: hidden; */
-  /* overflow-y: hidden; */
 }
