--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,9 +1,4 @@
-.navbar {
+.navbar,
+.navbar__tokenless {
     max-height: 5rem;
-}
-
-.navbar-burger {
-    width: 50px !important;
-    margin-left: auto !important;
-    margin-right: 0 !important;
 }
